// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueeStyle renders 0 1`] = `
Array [
  .c0 {
  marquee-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders function 1`] = `
Array [
  .c0 {
  marquee-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders negative number 1`] = `
Array [
  .c0 {
  marquee-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    marquee-style: July;
  }
}

@media April {
  .c0 {
    marquee-style: August;
  }
}

@media January {
  .c0 {
    marquee-style: September;
  }
}

@media April {
  .c0 {
    marquee-style: November;
  }
}

@media June {
  .c0 {
    marquee-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-style: July;
  }
}

@media April {
  .c0 {
    marquee-style: August;
  }
}

@media January {
  .c0 {
    marquee-style: September;
  }
}

@media April {
  .c0 {
    marquee-style: November;
  }
}

@media June {
  .c0 {
    marquee-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-style: January;
  }
}

@media April {
  .c0 {
    marquee-style: December;
  }
}

@media January {
  .c0 {
    marquee-style: April;
  }
}

@media April {
  .c0 {
    marquee-style: May;
  }
}

@media June {
  .c0 {
    marquee-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-style: January;
  }
}

@media April {
  .c0 {
    marquee-style: December;
  }
}

@media January {
  .c0 {
    marquee-style: April;
  }
}

@media April {
  .c0 {
    marquee-style: May;
  }
}

@media June {
  .c0 {
    marquee-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders postitive number 1`] = `
Array [
  .c0 {
  marquee-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders string 1`] = `
Array [
  .c0 {
  marquee-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeStyle renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
